# ttrpg-listen

./: .gitignore  README.md  config.example.yaml  pyproject.toml  ttrpg-start.bat  ttrpg-start.sh  ttrpg-stop.bat  ttrpg-stop.sh
src/ttrpglisten/: __init__.py  __main__.py  app.py  audio.py  cli.py  config.py  diarize.py  display.py  main_window.py  pipeline.py  postprocess.py  transcribe.py  vad.py
src/ttrpglisten/audio/: devices.py  recorder.py
src/ttrpglisten/models/: selector.py
src/ttrpglisten/panels/: accurate_caption.py  controls.py  quick_caption.py
src/ttrpglisten/utils/: config.py  platform.py
src/ttrpglisten/widgets/: equalizer.py  mic_test.py
src/ttrpglisten/workers/: audio_capture.py  diarization.py  live_caption.py  transcription.py
