[project]
name = "ttrpg-listen"
version = "0.3.0"
description = "Local AI-powered live transcription for TTRPG sessions"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6,<7",
    "sounddevice>=0.4.7,<1",
    "numpy>=1.24,<3",
    "scipy>=1.11,<2",
    "whisperx>=3.8,<4",
    "pyannote-audio>=3.1,<5",
    "pandas>=2.0,<3",
    # Windows-only: WASAPI loopback + COM (for the Live Captions UI Automation reader)
    "pyaudiowpatch>=0.2.12,<1; platform_system=='Windows'",
    "comtypes>=1.2,<2; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
ttrpglisten = "ttrpglisten.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
